# ecglib

./: CMakeLists.txt  README.md
include/: ecglib.h  filter.h  globals.h  peaks.h  sensor.h  test.h
src/: debug.h  ecglib.c  filter.c  globals.c  main.c  peaks.c  sensor.c  test.c  utils.c
